@@ -1,5 +1,5 @@
 <?php
-# Copyright 2008 Maxmind LLC All Rights Reserved
+# Copyright 2009 Maxmind LLC All Rights Reserved
 $GEOIP_REGION_NAME = array(
 "AD" => array(
   "02" => "Canillo",
@@ -101,6 +101,7 @@ $GEOIP_REGION_NAME = array(
   "09" => "Huila",
   "10" => "Luanda",
   "12" => "Malanje",
+  "13" => "Namibe",
   "14" => "Moxico",
   "15" => "Uige",
   "16" => "Zaire",
@@ -405,6 +406,7 @@ $GEOIP_REGION_NAME = array(
   "03" => "Al Muharraq",
   "05" => "Jidd Hafs",
   "06" => "Sitrah",
+  "07" => "Ar Rifa' wa al Mintaqah al Janubiyah",
   "08" => "Al Mintaqah al Gharbiyah",
   "09" => "Mintaqat Juzur Hawar",
   "10" => "Al Mintaqah ash Shamaliyah",
@@ -441,7 +443,18 @@ $GEOIP_REGION_NAME = array(
   "04" => "Mono",
   "05" => "Oueme",
   "06" => "Zou",
-  "14" => "Littoral"),
+  "07" => "Alibori",
+  "08" => "Atakora",
+  "09" => "Atlanyique",
+  "10" => "Borgou",
+  "11" => "Collines",
+  "12" => "Kouffo",
+  "13" => "Donga",
+  "14" => "Littoral",
+  "15" => "Mono",
+  "16" => "Oueme",
+  "17" => "Plateau",
+  "18" => "Zou"),
 "BM" => array(
   "01" => "Devonshire",
   "02" => "Hamilton",
@@ -655,6 +668,8 @@ $GEOIP_REGION_NAME = array(
   "25" => "Zurich",
   "26" => "Jura"),
 "CI" => array(
+  "05" => "Atacama",
+  "06" => "Biobio",
   "51" => "Sassandra",
   "61" => "Abidjan",
   "74" => "Agneby",
@@ -738,8 +753,8 @@ $GEOIP_REGION_NAME = array(
   "02" => "Antioquia",
   "03" => "Arauca",
   "04" => "Atlantico",
-  "05" => "Bolívar Department",
-  "06" => "Boyacá Department",
+  "05" => "Bolivar Department",
+  "06" => "Boyaca Department",
   "07" => "Caldas Department",
   "08" => "Caqueta",
   "09" => "Cauca",
@@ -824,7 +839,7 @@ $GEOIP_REGION_NAME = array(
   "04" => "Breclav",
   "20" => "Hradec Kralove",
   "21" => "Jablonec nad Nisou",
-  "23" => "Jiein",
+  "23" => "Jicin",
   "24" => "Jihlava",
   "30" => "Kolin",
   "33" => "Liberec",
@@ -833,22 +848,22 @@ $GEOIP_REGION_NAME = array(
   "39" => "Nachod",
   "41" => "Nymburk",
   "45" => "Pardubice",
-  "52" => "Hlavni Mesto Praha",
+  "52" => "Hlavni mesto Praha",
   "61" => "Semily",
   "70" => "Trutnov",
-  "78" => "Jihomoravsky Kraj",
-  "79" => "Jihocesky Kraj",
+  "78" => "Jihomoravsky kraj",
+  "79" => "Jihocesky kraj",
   "80" => "Vysocina",
-  "81" => "Karlovarsky Kraj",
-  "82" => "Kralovehradecky Kraj",
-  "83" => "Liberecky Kraj",
-  "84" => "Olomoucky Kraj",
-  "85" => "Moravskoslezsky Kraj",
-  "86" => "Pardubicky Kraj",
-  "87" => "Plzensky Kraj",
-  "88" => "Stredocesky Kraj",
-  "89" => "Ustecky Kraj",
-  "90" => "Zlinsky Kraj"),
+  "81" => "Karlovarsky kraj",
+  "82" => "Kralovehradecky kraj",
+  "83" => "Liberecky kraj",
+  "84" => "Olomoucky kraj",
+  "85" => "Moravskoslezsky kraj",
+  "86" => "Pardubicky kraj",
+  "87" => "Plzensky kraj",
+  "88" => "Stredocesky kraj",
+  "89" => "Ustecky kraj",
+  "90" => "Zlinsky kraj"),
 "DE" => array(
   "01" => "Baden-Wurttemberg",
   "02" => "Bayern",
@@ -1884,7 +1899,7 @@ $GEOIP_REGION_NAME = array(
   "15" => "Khuzestan",
   "16" => "Kordestan",
   "17" => "Mazandaran",
-  "18" => "Semnān Province",
+  "18" => "Semnan Province",
   "19" => "Markazi",
   "21" => "Zanjan",
   "22" => "Bushehr",
@@ -2049,24 +2064,26 @@ $GEOIP_REGION_NAME = array(
   "08" => "Osh",
   "09" => "Batken"),
 "KH" => array(
+  "00" => "Banteay Meanchey",
+  "01" => "Batdambang",
   "02" => "Kampong Cham",
   "03" => "Kampong Chhnang",
-  "04" => "Kampong Spoe",
+  "04" => "Kampong Speu",
   "05" => "Kampong Thum",
   "06" => "Kampot",
   "07" => "Kandal",
-  "08" => "Kaoh Kong",
+  "08" => "Koh Kong",
   "09" => "Kracheh",
-  "10" => "Mondol Kiri",
+  "10" => "Mondulkiri",
   "11" => "Phnum Penh",
-  "12" => "Pouthisat",
+  "12" => "Pursat",
   "13" => "Preah Vihear",
   "14" => "Prey Veng",
-  "15" => "Rotanokiri",
-  "16" => "Siemreab-Otdar Meanchey",
-  "17" => "Stoeng Treng",
+  "15" => "Ratanakiri Kiri",
+  "16" => "Siem Reap",
+  "17" => "Stung Treng",
   "18" => "Svay Rieng",
-  "19" => "Takev",
+  "19" => "Takeo",
   "29" => "Batdambang",
   "30" => "Pailin"),
 "KI" => array(
@@ -2873,7 +2890,9 @@ $GEOIP_REGION_NAME = array(
   "13" => "Nueva Segovia",
   "14" => "Rio San Juan",
   "15" => "Rivas",
-  "16" => "Zelaya"),
+  "16" => "Zelaya",
+  "17" => "Autonoma Atlantico Norte",
+  "18" => "Region Autonoma Atlantico Sur"),
 "NL" => array(
   "01" => "Drenthe",
   "02" => "Friesland",
@@ -3335,7 +3354,6 @@ $GEOIP_REGION_NAME = array(
   "42" => "Giurgiu",
   "43" => "Ilfov"),
 "RS" => array(
-  "00" => "Serbia proper",
   "01" => "Kosovo",
   "02" => "Vojvodina"),
 "RU" => array(
@@ -3429,7 +3447,8 @@ $GEOIP_REGION_NAME = array(
   "88" => "Yaroslavl'",
   "89" => "Yevrey",
   "90" => "Permskiy Kray",
-  "91" => "Krasnoyarskiy Kray"),
+  "91" => "Krasnoyarskiy Kray",
+  "CI" => "Chechnya Republic"),
 "RW" => array(
   "01" => "Butare",
   "06" => "Gitarama",
@@ -3497,7 +3516,9 @@ $GEOIP_REGION_NAME = array(
   "32" => "Bahr al Ghazal",
   "33" => "Darfur",
   "34" => "Kurdufan",
-  "35" => "Upper Nile"),
+  "35" => "Upper Nile",
+  "40" => "Al Wahadah State",
+  "44" => "Central Equatoria State"),
 "SE" => array(
   "01" => "Alvsborgs Lan",
   "02" => "Blekinge Lan",
@@ -3874,8 +3895,10 @@ $GEOIP_REGION_NAME = array(
   "70" => "Yala",
   "71" => "Ubon Ratchathani",
   "72" => "Yasothon",
+  "73" => "Nakhon Phanom",
   "75" => "Ubon Ratchathani",
   "76" => "Udon Thani",
+  "77" => "Amnat Charoen",
   "78" => "Mukdahan"),
 "TJ" => array(
   "01" => "Kuhistoni Badakhshon",
@@ -3900,10 +3923,11 @@ $GEOIP_REGION_NAME = array(
   "19" => "Nabul",
   "22" => "Silyanah",
   "23" => "Susah",
+  "26" => "Chaiyaphum Province",
   "27" => "Bin",
   "28" => "Madanin",
   "29" => "Qabis",
-  "30" => "Qafşah",
+  "30" => "Qafsah",
   "31" => "Qibili",
   "32" => "Safaqis",
   "33" => "Sidi Bu Zayd",
@@ -4083,12 +4107,17 @@ $GEOIP_REGION_NAME = array(
   "23" => "Northern",
   "24" => "Southern",
   "25" => "Western",
+  "33" => "Jinja",
+  "36" => "Kalangala",
   "37" => "Kampala",
+  "42" => "Kiboga",
+  "52" => "Mbarara",
   "56" => "Mubende",
   "65" => "Adjumani",
   "66" => "Bugiri",
   "67" => "Busia",
   "69" => "Katakwi",
+  "71" => "Masaka",
   "73" => "Nakasongola",
   "74" => "Sembabule",
   "77" => "Arua",
@@ -4322,6 +4351,7 @@ $GEOIP_REGION_NAME = array(
   "83" => "Phu Tho",
   "84" => "Quang Nam",
   "85" => "Thai Nguyen",
+  "86" => "Vinh Puc Province",
   "87" => "Can Tho",
   "88" => "Dak Lak",
   "89" => "Lai Chau",
@@ -4374,6 +4404,7 @@ $GEOIP_REGION_NAME = array(
   "24" => "Lahij",
   "25" => "Ta"),
 "ZA" => array(
+  "01" => "North-Western Province",
   "02" => "KwaZulu-Natal",
   "03" => "Free State",
   "05" => "Eastern Cape",
