@@ -1,3 +1,4 @@
+	* Sync geoipregionvars.php with fips codes from Jan, 14th 2009 ( Boris Zentner )
 	* use metro_code in sample_city.php ( Boris Zentner )  
 	* replace the depreciated dma_code field with metro_code ( Boris Zentner )
 	* remove wrong but unreferenced Singapur SG fips regions codes ( Boris Zentner )  
